# intelliextract

./: .env.example  .gitignore  DEVELOPMENT_ROADMAP.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  benchmarks.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 051612332459_initial_schema.py  ab3d1bcf2303_add_cached_column_to_jobs.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  documents.py  metrics.py  ping.py
app/core/: config.py  error_handlers.py  logging.py  middleware.py  redis.py  security.py
app/db/: session.py
app/models/: __init__.py  api_key.py  job.py  job_attempt.py  job_result.py
app/schemas/: auth.py  document.py  errors.py  invoice.py
app/services/: ai_extraction.py  extraction.py  file_validation.py  generic_extraction.py  metrics.py  rate_limiter.py  self_correction.py  validation.py
app/services/llm/: base.py  factory.py  groq_client.py
app/storage/: base.py  factory.py  local.py  s3.py
app/worker/: main.py  queue.py  tasks.py
scripts/: create_api_key.py  load_test.py  verify_db.py
tests/: conftest.py  test_ai_extraction.py  test_auth_keys.py  test_auth_rate_limit.py  test_document_query.py  test_documents.py  test_error_envelope.py  test_extraction.py  test_generic_extraction.py  test_healthz.py  test_metrics.py  test_self_correction.py  test_validation.py  test_worker.py
tests/fixtures/: generators.py
