[project]
name = "intelliextract"
version = "0.1.0"
description = "AI-powered document extraction & validation pipeline API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.46",
    "fastapi>=0.115",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
